# intelligent-systems

./: .gitignore  LICENSE  README.md
doc/: Makefile.am  abstract.tex  configure.ac  documentation.tex  report.tex  unipi.sty
doc/chapters/: activity.tex  cnn.tex  dataset.tex  ecg.tex  fuzzy.tex  intro.tex  rnn.tex
doc/chapters/activity/: hyperopt.tex  training.tex
doc/chapters/cnn/: arch.tex  base.tex  convlayers.tex  dropout.tex  filters.tex  finalcnn.tex  normalization.tex  training.tex
doc/chapters/dataset/: augmentdata.tex  extractfeaturestargets.tex  normalization.tex
doc/chapters/ecg/: featureselection.tex  hyperopt.tex  training.tex
doc/chapters/fuzzy/: anfis.tex  featureselection.tex  mamdani.tex
doc/chapters/intro/: execnotes.tex  organization.tex  testing.tex
doc/chapters/rnn/: finalrnn.tex  neurons.tex  normalization.tex  training.tex  winsize.tex
doc/img/: .gitignore  pipelineexample.drawio  svgtopdf.sh
doc/listings/: activityhyperopt.txt  cnndef.m  cnndef1.m  cnndef7.m  cnnresults.txt  mlphyperopt.txt  pipelineexample.m  rnndef.m  rnnresults.txt  sequentialfsnormal.txt  sequentialfswindowed.txt  startingrnn.m
doc/m4/: ac_latex_class_beamer.m4
src/: RunPolicy.m  Stage.m  diaryon.m  exportfigure.m  mamdani.fis  runstages.m  startup.m  testis.m
src/cnndefs/: cnndef.m  cnndef1.m  cnndef10.m  cnndef11.m  cnndef12.m  cnndef13.m  cnndef14.m  cnndef15.m  cnndef16.m  cnndef17.m  cnndef18.m  cnndef19.m  cnndef2.m  cnndef20.m  cnndef21.m  cnndef22.m  cnndef23.m  cnndef24.m  cnndef25.m  cnndef26.m  cnndef27.m  cnndef28.m  cnndef29.m  cnndef3.m  cnndef30.m  cnndef31.m  cnndef32.m  cnndef33.m  cnndef34.m  cnndef35.m  cnndef36.m  cnndef37.m  cnndef38.m  cnndef39.m  cnndef4.m  cnndef40.m  cnndef41.m  cnndef42.m  cnndef5.m  cnndef6.m  (+3 more)
src/extractfeatures/: computefeatures.m  extractfeatures.m
src/preparedata/: preparedata.m
src/rnndefs/: rnndef.m  rnndef1.m  rnndef10.m  rnndef11.m  rnndef12.m  rnndef13.m  rnndef14.m  rnndef15.m  rnndef16.m  rnndef17.m  rnndef18.m  rnndef19.m  rnndef2.m  rnndef20.m  rnndef21.m  rnndef22.m  rnndef3.m  rnndef4.m  rnndef5.m  rnndef6.m  rnndef7.m  rnndef8.m  rnndef9.m
src/scripts/: cnntrain.m  featureselection.m  (+14 more)
(+163 files in other folders)
